--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+    https://github.com/esphome/ESPAsyncWebServer.git
+    https://github.com/esphome/AsyncTCP.git
